тринеровка в составлении списка

--- a/project-2/leson2.html
+++ b/project-2/leson2.html
@@ -27,5 +27,34 @@
     <p>абзац с текстом</p>
     <hr />
     <p>Это обычный текст,а это <b>жирный</b> текст.</p>
+    <hr />
+    <ul>
+      <li>пункт списка</li>
+      <li>пункт списка</li>
+      <li>пункт списка</li>
+      <li>пункт списка</li>
+      <li>пункт списка</li>
+    </ul>
+    <hr />
+    <ul>
+      <li>красный</li>
+      <li>желтый</li>
+      <li>зеленый</li>
+      <li>синий</li>
+    </ul>
+    <hr />
+    <ol>
+      <li>пункт списка</li>
+      <li>пункт списка</li>
+      <li>пункт списка</li>
+      <li>пункт списка</li>
+      <li>пункт списка</li>
+    </ol>
+    <hr />
+    <li>Иванов</li>
+    <li>Петров</li>
+    <li>Сидоров</li>
+    <li>Николаев</li>
+    <li>Чебурашкин</li>
   </body>
 </html>
