изучение HTML разметки

--- a/project3/index.html
+++ b/project3/index.html
@@ -20,6 +20,6 @@
         <a href="./page-comments.html">Связаться с нами</a>
       </li>
     </ul>
-    <a href=""></a>
+    <img src="../project-4/img/smile.png" alt="smile" />
   </body>
 </html>
