--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,51 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume</title>
-  </head>
-  <body>
-    <h1 style="display: none">Resume</h1>
-    <aside>
-      <img src="./img/myphoto.jpg" width="300" alt="" />
-      <div>
-        <h2>Contacts</h2>
-        <ul>
-          <li>
-            <span>C:</span>
-            <a href="tel:+380633967923">+38(063)396-79-23</a>
-          </li>
-          <li>
-            <span>E:</span>
-            <a href="mailto:d.marshtupenko@nmsk.education">напишите мне</a>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h2>Tech Skills</h2>
-        <ul>
-          <li>
-            <p>HTML5</p>
-          </li>
-          <li><p>CSS3</p></li>
-          <li><p>GIT</p></li>
-          <li><p>WebPack</p></li>
-          <li><p>JavaScript</p></li>
-          <li><p>React.js</p></li>
-          <li><p>Node.js</p></li>
-        </ul>
-      </div>
-      <div>
-        <h2>Soft Skills</h2>
-        <ul>
-          <li><p>Scrum</p></li>
-          <li><p>Agile</p></li>
-          <li><p>GTD</p></li>
-          <li><p>Teamwork</p></li>
-        </ul>
-      </div>
-    </aside>
-    <div class="container"></div>
-  </body>
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Resume</title>
+</head>
+<body>
+<h1 style="display: none">Resume</h1>
+<aside>
+  <img src="./img/myphoto.jpg" width="300" alt=""/>
+  <div>
+    <h2>Contacts</h2>
+    <ul>
+      <li>
+        <span>C:</span>
+        <a href="tel:+380633967923">+38(063)396-79-23</a>
+      </li>
+      <li>
+        <span>E:</span>
+        <a href="mailto:d.marshtupenko@nmsk.education">напишите мне</a>
+      </li>
+    </ul>
+  </div>
+  <div>
+    <h2>Tech Skills</h2>
+    <ul>
+      <li>
+        <p>HTML5</p>
+      </li>
+      <li><p>CSS3</p></li>
+      <li><p>GIT</p></li>
+      <li><p>WebPack</p></li>
+      <li><p>JavaScript</p></li>
+      <li><p>React.js</p></li>
+      <li><p>Node.js</p></li>
+    </ul>
+  </div>
+  <div>
+    <h2>Soft Skills</h2>
+    <ul>
+      <li><p>Scrum</p></li>
+      <li><p>Agile</p></li>
+      <li><p>GTD</p></li>
+      <li><p>Teamwork</p></li>
+    </ul>
+  </div>
+</aside>
+<div class="container">
+  <h2>Front-End Developer</h2>
+  <h3>Taras Goitinskiy
+  </h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Quis ipsum
+    suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan
+    lacus vel facilisis. </p>
+  <h3>Projects</h3>
+  <ol>
+    <li><a href="https://hellen.p.goit.global/">https://hellen.p.goit.global/</a>
+    </li>
+    <li><a href="https://cryptohub.p.goit.global/">https://cryptohub.p.goit.global/</a>
+    </li>
+    <li><a href="https://kidslike.p.goit.global/">https://kidslike.p.goit.global/</a>
+    </li>
+  </ol>
+  <ul>
+    <li>[ HTML5, CSS3 ]</li>
+    <li>[ JavaScript ]</li>
+    <li>[ React.js, Node.js ]</li>
+  </ul>
+  <h3>Work Experience</h3>
+  <ul>
+    <li>
+      <h3>Front-End Developer Freelance </h3>
+      <p>September 2019 - up to now | Country</p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+          do eiusmod tempor incididunt ut labore et dolore magna
+          aliqua.
+        </li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </li>
+        <li>Risus commodo viverra maecenas.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+          do eiusmod.
+        </li>
+      </ul>
+    </li>
+
+    <li>
+      <h3>Manager Banderogusak & Co.</h3>
+      <p>September 2019 - up to now | Country</p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+          do eiusmod labore et dolore magna aliqua.
+        </li>
+        <li>Quis ipsum suspendisse ultrices gravida.</li>
+        <li>Risus commodo viverra maecenas.</li>
+      </ul>
+    </li>
+
+    <li>
+      <h3>Manager BestUA Corp.</h3>
+      <p>June 2014 - February 2015 | Country</p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </li>
+        <li>Quis ipsum suspendisse ultrices gravida.</li>
+        <li>Risus commodo viverra maecenas.</li>
+      </ul>
+    </li>
+  </ul>
+</div>
+<div>
+  <h3>Education</h3>
+  <p>National University of Management</p>
+  <p>Management</p>
+  <p>September 2009 - June 2014 | Country</p>
+</div>
+</body>
 </html>
