start project. Added header, hero and about serctions

--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -17,28 +17,105 @@
       <a href="+380441111111">+38 044 111 11 11</a>
       <button type="button">Online-booking</button>
     </header>
-    <main></main>
-    <section>
-      <ul>
-        <li>
-          <a href="#" target="_blank" rel="noopener noreferrer nofollow"
-            >Instagram</a
-          >
-        </li>
-        <li>
-          <a href="#" target="_blank" rel="noopener noreferrer nofollow"
-            >Youtube</a
-          >
-        </li>
-      </ul>
-      <p>A hair salon for men in Kyiv</p>
-      <h1>BarberShop</h1>
-      <p>
-        We are experts in trendy men’s haircuts. We work quickly, carefully and
-        with style.
-      </p>
-    </section>
-    <aside></aside>
+    <main>
+      <section>
+        <ul>
+          <li>
+            <a href="#" target="_blank" rel="noopener noreferrer nofollow"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a href="#" target="_blank" rel="noopener noreferrer nofollow"
+              >Youtube</a
+            >
+          </li>
+        </ul>
+        <p>A hair salon for men in Kyiv</p>
+        <h1>BarberShop</h1>
+        <p>
+          We are experts in trendy men’s haircuts. We work quickly, carefully
+          and with style.
+        </p>
+      </section>
+      <!-- Hero section-->
+
+      <!--About sertion-->
+      <section>
+        <ul>
+          <ul>
+            <li>
+              <section>
+                <ul>
+                  <li>
+                    <a
+                      href="#"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      >Instagram</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      >Youtube</a
+                    >
+                  </li>
+                </ul>
+                <p>A hair salon for men in Kyiv</p>
+                <h1>BarberShop</h1>
+                <p>
+                  We are experts in trendy men’s haircuts. We work quickly,
+                  carefully and with style.
+                </p>
+              </section>
+              <section>
+                <ul>
+                  <li>
+                    <a
+                      href="#"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      >Instagram</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      >Youtube</a
+                    >
+                  </li>
+                </ul>
+                <p>A hair salon for men in Kyiv</p>
+                <h1>BarberShop</h1>
+                <p>
+                  We are experts in trendy men’s haircuts. We work quickly,
+                  carefully and with style.
+                </p>
+              </section>
+              <img src="" alt="" />
+            </li>
+            <li><img src="./img/img 1 (1).jpg" alt="Barbershop"</li>
+            <li><img src="./img/img 2.jpg" alt="Barbershop" /</li>
+			</ul>
+			<p>About</p>
+			<h2>Best Barbershop in your city</h2>
+			<p>
+				<span>
+					If you want to add more conf
+					>
+					idence to your image, you should definitely visit us.
+					>
+					We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!
+				</span>
+			</p>
+			<button type="button">ONLINE-BOOKING</button>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
